# cdk-pipeline-example

./: Makefile  README.md  app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
infrastructure/: app.py  template.yaml
infrastructure/stacks/: application.py  database.py  pipeline.py
software/src/: requirements.txt
